# somhunter

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerbase  Dockerfile  HOWTO-build-native.md  HOWTO-display.md  HOWTO-rescore.md  LICENSE.md  README.md  app.js  config.json  docker-compose.yml  docker_build.bat  docker_build.sh  gulpfile.js  install-docker.sh  install.sh  package-lock.json  package.json  run-core.sh  run-data-server.sh  run-ui.sh  run.sh  run_server.sh  run_ui.sh
_scripts/: style_cpp_format.bat  style_cpp_format.sh
config/: apiConfig.json  apiUserConfig.json  config.js  config.json  index.js  serverConfig.json  strings.json  uiConfig.json
core/: CMakeLists.txt  SomHunterNapi.cpp  SomHunterNapi.h  binding.gyp  main.cpp
core/src/: AsyncSom.cpp  AsyncSom.h  CMakeLists.txt  DatasetFeatures.cpp  DatasetFeatures.h  DatasetFrames.cpp  DatasetFrames.h  Filters.cpp  Filters.h  KeywordRanker.cpp  KeywordRanker.h  RelevanceScores.cpp  RelevanceScores.h  SOM.cpp  SOM.h  SearchContext.cpp  SearchContext.h  SomHunter.cpp  SomHunter.h  Submitter.cpp  Submitter.h  UserContext.cpp  UserContext.h  common.h  config.h  config_json.h  distfs.h  json11.cpp  json11.hpp  log.h  main.cpp  tests.hpp  use_intrins.h  utils.h
extractor/: README.md
misc/: config_ITEC.json  config_v3c1.json  style_cpp_format.sh  subframe_vis.html  watch_actions_log.sh  watch_requests_log.sh
routes/: 404.js  endpoints.js  somhunter.js
scripts/: run-core.sh  run-data-server.sh  run-ranking-server.sh  run-ui.sh
ui/: .eslintignore  .eslintrc.json  .gitignore  frames  (+3 more)
(+142 files in other folders)
